[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # can be removed if the packages are published on PyPI

[project]
name = "lcommon"
version = "0.0.1"
authors = [
    { name = "Sergio Hernandez Gutierrez", email = "contact.sergiohernandez@gmail.com" },
]
description = "A collection of common internal utilities and definitions to support the packages `lmodels` and `lmethods`."
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/serhez/lcommon"
Issues = "https://github.com/serhez/lcommon/issues"
